NANO-439: Unify function exits before flattening
Factor out the code from Converge that converts functions to have only a
single exit and use that in the flatten-cfg pass.

That fixes the issue observed in NANO-439.

--- a/back_end/SConscript
+++ b/back_end/SConscript
@@ -56,6 +56,7 @@ sources = [
     'setup_func.cpp',
     'setup_func_builder.cpp',
     'thread_const.cpp',
+    'unify_function_returns.cpp',
 ]
 
 lib_nanotube_env = env.Clone()
