--- a/back_end/Intrinsics.yaml
+++ b/back_end/Intrinsics.yaml
@@ -46,7 +46,7 @@
   - ModRef: _
 
 - Name: llvm_memset
-  ExtName: memset
+  ExternName: memset
   Flags: Extern
   Fmrb: RW
   Args:
@@ -56,6 +56,7 @@
   - ModRef: N
 
 - Name: llvm_memcpy
+  ExternName: memcpy
   Flags: LLVM
   Fmrb: RW
   Args:
@@ -65,6 +66,7 @@
   - ModRef: N
 
 - Name: llvm_memcmp
+  ExternName: memcmp
   Flags: LLVM
   Fmrb: RO
   Args:
