Testing: Allow the user to specify additional tests
Adding support for tests that live outside of the normal Nanotube
directory.  These will be built into the normal build directory.  Note
that the setting will persist across invocations to scons, please see
below.

Use as follows:

scons ... EXTRA_TESTS=../my_additional_tests/ all
scons ... run_tests

The directory structure in my_additional_tests should match that of
what exists in the normal Nanotube repository:

> tree -L 2 -d ../my_additional_tests
...
├── testing
│   ├── kernel_tests
│   └── pass_tests
...

These tests will use the same build and test running infrastructure as
the existing tests, but custom files need to be provided:

* lit.cfg, lit.local.cfg .. defining the test suite
* gen_test_list .. defining the different tests and options used for
  them

--- a/testing/kernel_tests/SConscript
+++ b/testing/kernel_tests/SConscript
@@ -155,3 +155,13 @@ def build_tests_and_golden(source_dir):
     golden_rules(test_list, golden_src)
 
 build_tests_and_golden(env['SOURCE_DIR'])
+
+# Allow the user to specify additional tests
+extra = env.get('EXTRA_TESTS')
+if extra:
+    extra_source = Dir(extra).Dir("testing/kernel_tests")
+    build_tests_and_golden(extra_source)
+    # Build the extra tests into the same build directory
+    env.VariantDir(env['BUILD_DIR'], extra_source, duplicate=0)
+    # Addiitonal includes from the extra test directory
+    env.Append(CCFLAGS=["-I", extra_source.Dir("include")])
